--- a/app/src/index.css
+++ b/app/src/index.css
@@ -16,7 +16,7 @@
 
 html {
   scroll-behavior: smooth;
-  font-size: 11px;
+  font-size: 14px;
 }
 
 body {
